--- a/style.css
+++ b/style.css
@@ -43,8 +43,8 @@ body{
     font-size: 1.5rem;
     font-weight: 400;
     font-style: italic;
-    color:#636569;
-    text-shadow: 1px 2px 1px black;
+    color:#000 ;
+    text-shadow: 2px 2px 3px #172541
 }
 .button-container{
     margin-top: 15px;
